# OAK-Drive-Sync

./: .gitignore  CLAUDE.md  OAK-Drive-Controller.desktop  README.md  install-desktop-shortcut.sh  install.sh  pyproject.toml  start.bat  start.sh
.claude/: settings.json
.claude/agents/: cam-controller.md  integration-test.md  monitoring.md  mqtt-infra.md  pi-controller.md
config/: camera_config.yaml  drive_config.yaml  drive_pinmap.yaml  imu_calibration.yaml  mosquitto.conf  mqtt_topics.yaml  positions.yaml
config/email_templates/: alert.txt.j2
config/sequences/: example_grid_scan.yaml
deploy/: mosquitto-oak.service  oak-drive-controller.service
docs/: PRD-MQTT.md  imu_mqtt_protocol.md
src/monitoring/: main.py
src/pi_controller/: gui.py  main.py  position_log.py  verify_calibration.py
src/pi_controller/drives/: __init__.py  base.py  gpio_drive.py  tinkerforge_drive.py
src/pi_controller/imu/: angle_history.py  auto_calibrator.py  drift_detector.py  newton_search.py
src/shared/: models.py  mqtt_client.py  mqtt_topics.py
src/win_controller/: main.py
